intTests/test_parse_errors/parser001.log.good
Loading file "parser001.saw"
parser001.saw:2:13-2:23: Error: Syntax error: unexpected `rebindable'
Some legal inputs at this point: '(' name
FAILED
